style posters to show side by side on mobile and fix movie value on small screen sizes

--- a/assets/css/quiz-style.css
+++ b/assets/css/quiz-style.css
@@ -32,7 +32,7 @@ body {
 #answer-1,
 #answer-2 {
     margin: auto;
-    min-width: 258px;
+    /* min-width: 258px; */
 }
 
 .wai-endofgame {
